update updatePlatformHook swagger doc
