# infr-project/platform-routes.go
@@ -50,7 +50,7 @@ func updatePlatform(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Platform ID"
 // @Param project_id path string true "Platform Project ID"
-// @Param request body platform.Webhook true "Request body"
+// @Param request body viewmodels.UpdatePlatformWebhookRequest true "Request body"
 // @Success 200
 // @Router /platform/{id}/hook [put]
 func updatePlatformHook(c *gin.Context) {
